# policyengine-taxsim

./: .gitignore  1202-MI.yaml  1202-MI_test.yaml  86782-KY.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TaxsimInputReader.py  TextDescriptionWriter.py  changelog.yaml  changelog_entry.yaml  output.txt  package-lock.json  pyproject.toml  taxsim_emulator.py  test.csv  vectorized_validation.py
.claude/: cspell.json
.github/: bump_version.py  changelog_template.md  fetch_version.py  is-version-number-acceptable.sh
changelog.d/: 539.added.md  7897-taxsim-compat-layer.changed.md  977.changed.md  add-assume-w2-wages-flag.added.md  add-chunking-and-multi-year.added.md  add-gtag-analytics.added.md  add-income-scaled-tolerance.added.md  add-landing-page.added.md  add-marginal-rates.added.md  add-model-diff-docs.added.md  add-remote-taxsim-runner.added.md  add-ruff.added.md  add-sample-datasets.added.md  add-srebate-net-of-rebates.added.md  add-stata-support.added.md  add-statefip-support.added.md  add-taxsim-opt30-flag.added.md  add-web-runner.added.md  audit-diagnose-issue-skill-2.changed.md  audit-diagnose-issue-skill.changed.md  bump-pe-us-and-niit-test.added.md  cap-dependent-ages-at-10.fixed.md  cli-idtl5-formatter.added.md  cli-status-to-stderr.fixed.md  codex-issue-7897-taxsim-state-taxable-income.fixed.md  custom_slash.added.md  dashboard-add-2025.added.md  dashboard-design-refresh.changed.md  dashboard-favicon.fixed.md  dashboard-full-ecps-1pct.changed.md  dashboard-relative-tolerance.added.md  deploy-modal-api.changed.md  diagnose-issue-comment-style.changed.md  diagnose-issue-verdict-format.changed.md  doc-spousal-allocation.changed.md  federal-salt-exclude-state-income-tax.fixed.md  fix-addl-medicare-tax-in-fiitax.fixed.md  fix-age-independent-pension-split.fixed.md  fix-basepath-for-embed.fixed.md  fix-both-young-pension-split.fixed.md  (+63 more)
cps-dashboard/: index.html  package-lock.json  package.json  vercel.json  vite.config.js  vitest.config.js
dashboard/: .env.production  .gitignore  index.html  next.config.mjs  package.json  social-posts.md  vercel.json  vite.config.js
docs/: ISSUE_ANALYZER_README.md
final_state_codes_test/: comparison_report_2023.txt  federal_mismatches_2023.csv  policyengine_results_2023.csv  state_mismatches_2023.csv  taxsim_results_2023.csv
issue_analysis/: README.md
output/: policyengine_taxsim_household_with_dependent_output.csv  policyengine_taxsim_household_with_dependent_single_parent_output.csv  policyengine_taxsim_joint_household_output.csv  policyengine_taxsim_single_household_output.csv  taxsim35_household_with_dependent_output.csv  taxsim35_household_with_dependent_single_parent_output.csv  taxsim35_joint_household_output.csv  taxsim35_single_household_output.csv
policyengine_taxsim/: __init__.py  api.py  cli.py  exe.py
(+191 files in other folders)
