[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policyengine-taxsim"
version = "2.7.3"
description = "A TAXSIM emulator using PolicyEngine US"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Al Noman", email = "al@policyengine.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "policyengine-us>=1.552.0",
    "pandas",
    "PyYAML",
    "click",
    "matplotlib",
    "numpy",
    "tqdm",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Homepage = "https://github.com/PolicyEngine/policyengine-taxsim"
"Bug Tracker" = "https://github.com/PolicyEngine/policyengine-taxsim/issues"

[project.scripts]
policyengine-taxsim = "policyengine_taxsim.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["policyengine_taxsim"]

include = [
    "policyengine_taxsim/**/*.py",
    "policyengine_taxsim/config/*.yaml",
]

[tool.hatch.build.targets.wheel.shared-data]
"resources/taxsim35" = "share/policyengine_taxsim/taxsim35"
"resources/taxsimtest" = "share/policyengine_taxsim/taxsimtest"

"policyengine_taxsim/config" = "policyengine_taxsim/config"


[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ {args}"
test-cov = "pytest tests/ --cov-report=term-missing --cov-config=pyproject.toml --cov=policyengine_taxsim {args}"
cov-report = ["- coverage combine", "coverage report"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "policyengine_taxsim/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.towncrier]
package = "policyengine_taxsim"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]